--- a/index.html
+++ b/index.html
@@ -1,59 +1,177 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Kraxiloth – Official Artist Page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kraxiloth | Presence. Ritual. Echo.</title>
   <style>
     body {
-      background: #121212;
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #050505;
       color: #e0e0e0;
-      font-family: system-ui, sans-serif;
-      padding: 2rem;
-      line-height: 1.6;
     }
-    a {
-      color: #8e44ad;
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1.5rem 2rem;
+      background: #0a0a0a;
+      border-bottom: 1px solid #333;
+    }
+    .brand {
+      font-size: 1.25rem;
+    }
+    .social-icons a {
+      margin-left: 1rem;
+      text-decoration: none;
+      color: #e0e0e0;
+    }
+    .main-content {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding: 2rem 4rem;
+    }
+    .arg-section, .music-section {
+      flex: 1 1 45%;
+      min-width: 280px;
+      margin-bottom: 2rem;
+    }
+    .arg-fragment {
+      border-left: 2px solid #5d4d7a;
+      padding-left: 1rem;
+      margin-bottom: 1.5rem;
+    }
+    .arg-fragment h2 {
+      color: #5d4d7a;
+      font-size: 1.1rem;
+    }
+    .glyph {
+      font-family: monospace;
+      color: #6c6a67;
+      margin-top: 0.5rem;
+    }
+    .music-section iframe {
+      width: 100%;
+      height: 380px;
+      border: none;
+      border-radius: 12px;
+    }
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.9rem;
+      background: #0a0a0a;
+      border-top: 1px solid #333;
+      color: #888;
+    }
+    @media (max-width: 768px) {
+      .main-content {
+        flex-direction: column;
+        padding: 1rem 2rem;
+      }
+    }
+  
+    .live-banner {
+      background: #5d4d7a;
+      color: #fff;
+      text-align: center;
+      padding: 0.5rem;
+      font-weight: bold;
+    }
+    .live-banner a {
+      color: white;
       text-decoration: none;
     }
-    h1 {
-      color: #ffffff;
-    }
-    h2 {
-      margin-top: 2rem;
-      color: #cccccc;
-    }
-    ul {
-      list-style: none;
-      padding-left: 0;
-    }
-    li {
-      margin-bottom: 0.5rem;
-    }
-  </style>
+    </style>
 </head>
 <body>
-  <h1>Kraxiloth</h1>
-  <p>Official artist site. Presence. Ritual. Echo.</p>
+  
+  <header>
+    <div class="brand">
+      Presence. Ritual. Echo.
+    </div>
+    <div class="social-icons">
+      <a href="https://twitch.tv/kraxiloth" target="_blank">Twitch</a>
+      <a href="https://youtube.com/@kraxiloth" target="_blank">YouTube</a>
+      <a href="https://discord.gg/YOUR_INVITE" target="_blank">Discord</a>
+      <a href="https://ko-fi.com/kraxiloth" target="_blank">Ko-fi</a>
+    </div>
+  </header>
 
-  <h2>Contact</h2>
-  <ul>
-    <li>Primary: <a href="mailto:contact@kraxiloth.gg">contact@kraxiloth.gg</a></li>
-    <li>Also reachable: <a href="mailto:kraxiloth@proton.me">kraxiloth@proton.me</a></li>
-  </ul>
+  <div class="main-content">
+    <div class="arg-section">
+      <h2 style="margin-bottom:0;">
+  <span title="An ARG (Alternate Reality Game) is an interactive mystery that unfolds through hidden messages, cryptic clues, and real-time discoveries. Engage with the fragments to uncover the signal.">ARG Fragments</span>
+</h2>
+      <div class="arg-fragment">
+        <h2>Fragment I: The Fracture</h2>
+        <p>
+          A reflection that was not your own. A signal in the static. The whisper of the first glyph.
+        </p>
+        <p class="glyph">Trigger phrase: "i remember the fracture"</p>
+<p><a href="https://i.imgur.com/ofhQepO.png" target="_blank">View Fragment I</a></p>
+      </div>
+      <div class="arg-fragment">
+        <h2>Fragment II: Transmission Burn</h2>
+        <p>
+          The glyph deepens, drawn not in ink, but memory. Only those attuned through the first echo can feel its burn.
+        </p>
+      </div>
+      <div class="arg-fragment">
+        <h2 style="color: #444;">Fragments III–V</h2>
+        <p style="opacity: 0.5;">Access restricted. Alignment incomplete.</p>
+      </div>
+    </div>
 
-  <h2>Listen</h2>
-  <p>
-    <a href="https://open.spotify.com/artist/1FZyBVkh3swMiIOKlVaV6U" target="_blank">Spotify</a>
-    |
-    <a href="https://soundcloud.com/kraxiloth" target="_blank">SoundCloud</a>
-  </p>
+    <div class="music-section">
+      <h2>Void Echoes</h2>
+      <p><strong>Echoes From the Void (2025)</strong></p>
+      <iframe src="https://open.spotify.com/embed/album/7niPShKKvu89sfDpXEx8GR?utm_source=generator"
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"></iframe>
+    </div>
+  </div>
 
-  <h2>Follow</h2>
-  <p>
-    <a href="https://twitter.com/kraxiloth" target="_blank">Twitter</a>
-    |
-    <a href="https://instagram.com/kraxiloth" target="_blank">Instagram</a>
-  </p>
+  <footer>
+    You are already part of the signal.
+  </footer>
+
+<script>
+  fetch('https://signal-monitor.kraxiloth.workers.dev/')
+    .then(response => response.json())
+    .then(data => {
+      if (data.live) {
+        const banner = document.createElement('div');
+        banner.innerHTML = `
+          <div style="
+            background:#5d4d7a;
+            color:white;
+            text-align:center;
+            padding:0.5rem;
+            font-weight:bold;
+          ">
+            <a href="https://twitch.tv/kraxiloth" target="_blank" style="color:white; text-decoration:none;">
+              🔴 Kraxiloth is live. Join the ritual.
+            </a>
+          </div>
+        `;
+        document.body.insertBefore(banner, document.body.firstChild);
+      }
+    })
+    .catch(err => console.error("Twitch status check failed:", err));
+</script>
+
+
+  <section>
+    <h2 style="text-align:center; color:#5d4d7a;">Signal Echoes</h2>
+    <div style="display:flex; justify-content:center; margin-bottom:2rem;">
+      <a class="twitter-timeline" data-theme="dark" data-tweet-limit="3" href="https://twitter.com/Kraxiloth">Tweets by @Kraxiloth</a>
+    </div>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </section>
+
 </body>
 </html>
