--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="social-icons">
       <a href="https://twitch.tv/kraxiloth" target="_blank">Twitch</a>
       <a href="https://youtube.com/@kraxiloth" target="_blank">YouTube</a>
-      <a href="https://discord.gg/YOUR_INVITE" target="_blank">Discord</a>
+      <a href="https://discord.gg/JXsKMAVe7p" target="_blank">Discord</a>
       <a href="https://ko-fi.com/kraxiloth" target="_blank">Ko-fi</a>
     </div>
   </header>
@@ -127,7 +127,7 @@
     </div>
 
     <div class="music-section">
-      <h2>Void Echoes</h2>
+      <h2>Music</h2>
       <p><strong>Echoes From the Void (2025)</strong></p>
       <iframe src="https://open.spotify.com/embed/album/7niPShKKvu89sfDpXEx8GR?utm_source=generator"
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -154,7 +154,7 @@
             font-weight:bold;
           ">
             <a href="https://twitch.tv/kraxiloth" target="_blank" style="color:white; text-decoration:none;">
-              🔴 Kraxiloth is live. Join the ritual.
+              🔴 Kraxiloth is LIVE. Join the ritual!
             </a>
           </div>
         `;
@@ -171,6 +171,11 @@
       <a class="twitter-timeline" data-theme="dark" data-tweet-limit="3" href="https://twitter.com/Kraxiloth">Tweets by @Kraxiloth</a>
     </div>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <p style="text-align:center; font-size:0.9rem;">
+      <a href="https://twitter.com/Kraxiloth" target="_blank" style="color:#aaa;">
+        Visit the signal feed on X if the embedded timeline doesn't appear.
+      </a>
+    </p>
   </section>
 
 </body>
